Revert "Merge pull request #7 from arsyakaukabi/refactor/search-retrieval"
This reverts commit 36b980827f4d5d7676f9d145f493f3322a6f9661, reversing
changes made to 172ada7688ce4bcc46f54c6cbcb1e7fcb0273765.
